--- a/X3.md
+++ b/X3.md
@@ -7,7 +7,7 @@
 | 16340160 | SaluteKat |  |  | 
 | 16340067 | hancx77 |  | 	 | 
 | 16340206 | 16340206 | [需求审计](https://github.com/Walikrence/swsad-project/issues/5#issue-459561297) | https://github.com/Walikrence/swsad-project/issues/5#issue-459561297 |  
-| 16340162 | roronoaws |  |  |  
+| 16340162 | roronoaws | [需求的问题](https://github.com/TeamWeGo/teamwego/issues/5) | https://github.com/TeamWeGo/teamwego/issues/5 |  
 
 ## 2、设计审计
 
@@ -18,4 +18,4 @@
 | 16340160 | SaluteKat |  |  | 
 | 16340067 | hancx77 |  | 	 | 
 | 16340206 | 16340206 | [设计审计](https://github.com/Walikrence/swsad-project/issues/4#issue-459560457) | https://github.com/Walikrence/swsad-project/issues/4#issue-459560457 |  
-| 16340162 | roronoaws |  |  |  
+| 16340162 | roronoaws | [设计的问题](https://github.com/TeamWeGo/teamwego/issues/6) | https://github.com/TeamWeGo/teamwego/issues/6 |  
