--- a/X3.md
+++ b/X3.md
@@ -4,7 +4,7 @@
 | 学号	 | github-id| 标题 | 	issue url|  
 | :------------: | :-------------: | :------------: | :-------------: |  
 | 16340146 | liubq98 | [需求审计](https://github.com/money-hub/Dashboard/issues/1) | https://github.com/money-hub/Dashboard/issues/1 |  
-| 16340160 | SaluteKat |  |  | 
+| 16340160 | SaluteKat | [需求审计](https://github.com/LittleMiser/LittleMiser/issues/1) | https://github.com/LittleMiser/LittleMiser/issues/1 | 
 | 16340067 | hancx77 |  | 	 | 
 | 16340206 | 16340206 | [需求审计](https://github.com/Walikrence/swsad-project/issues/5#issue-459561297) | https://github.com/Walikrence/swsad-project/issues/5#issue-459561297 |  
 | 16340162 | roronoaws | [需求的问题](https://github.com/TeamWeGo/teamwego/issues/5) | https://github.com/TeamWeGo/teamwego/issues/5 |  
@@ -15,7 +15,7 @@
 | 学号	 | github-id| 标题 | 	issue url|  
 | :------------: | :-------------: | :------------: | :-------------: |  
 | 16340146 | liubq98 | [设计审计](https://github.com/money-hub/Dashboard/issues/2) | https://github.com/money-hub/Dashboard/issues/2 |  
-| 16340160 | SaluteKat |  |  | 
+| 16340160 | SaluteKat | [设计审计](https://github.com/LittleMiser/LittleMiser/issues/2) | https://github.com/LittleMiser/LittleMiser/issues/2 | 
 | 16340067 | hancx77 |  | 	 | 
 | 16340206 | 16340206 | [设计审计](https://github.com/Walikrence/swsad-project/issues/4#issue-459560457) | https://github.com/Walikrence/swsad-project/issues/4#issue-459560457 |  
 | 16340162 | roronoaws | [设计的问题](https://github.com/TeamWeGo/teamwego/issues/6) | https://github.com/TeamWeGo/teamwego/issues/6 |  
