--- a/X3.md
+++ b/X3.md
@@ -5,7 +5,7 @@
 | :------------: | :-------------: | :------------: | :-------------: |  
 | 16340146 | liubq98 | [需求审计](https://github.com/money-hub/Dashboard/issues/1) | https://github.com/money-hub/Dashboard/issues/1 |  
 | 16340160 | SaluteKat | [需求审计](https://github.com/LittleMiser/LittleMiser/issues/1) | https://github.com/LittleMiser/LittleMiser/issues/1 | 
-| 16340067 | hancx77 |  |  | 
+| 16340067 | hancx77 | [需求审计](https://github.com/hhhghh/Dashboard/issues/14) | https://github.com/hhhghh/Dashboard/issues/14 | 
 | 16340206 | 16340206 | [需求审计](https://github.com/Walikrence/swsad-project/issues/5#issue-459561297) | https://github.com/Walikrence/swsad-project/issues/5#issue-459561297 |  
 | 16340162 | roronoaws | [需求的问题](https://github.com/TeamWeGo/teamwego/issues/5) | https://github.com/TeamWeGo/teamwego/issues/5 |  
 
@@ -16,6 +16,6 @@
 | :------------: | :-------------: | :------------: | :-------------: |  
 | 16340146 | liubq98 | [设计审计](https://github.com/money-hub/Dashboard/issues/2) | https://github.com/money-hub/Dashboard/issues/2 |  
 | 16340160 | SaluteKat | [设计审计](https://github.com/LittleMiser/LittleMiser/issues/2) | https://github.com/LittleMiser/LittleMiser/issues/2 | 
-| 16340067 | hancx77 | | 	 | 
+| 16340067 | hancx77 | [设计审计](https://github.com/hhhghh/Dashboard/issues/15)| 	https://github.com/hhhghh/Dashboard/issues/15 | 
 | 16340206 | 16340206 | [设计审计](https://github.com/Walikrence/swsad-project/issues/4#issue-459560457) | https://github.com/Walikrence/swsad-project/issues/4#issue-459560457 |  
 | 16340162 | roronoaws | [设计的问题](https://github.com/TeamWeGo/teamwego/issues/6) | https://github.com/TeamWeGo/teamwego/issues/6 |  
